@@ -30,18 +30,20 @@ import net.william278.husksync.BukkitHuskSync;
 import net.william278.husksync.HuskSync;
 import net.william278.husksync.adapter.Adaptable;
 import net.william278.husksync.user.BukkitUser;
-import org.bukkit.*;
+import org.bukkit.Bukkit;
+import org.bukkit.Material;
+import org.bukkit.Registry;
+import org.bukkit.Statistic;
 import org.bukkit.advancement.AdvancementProgress;
-import org.bukkit.attribute.Attribute;
 import org.bukkit.attribute.AttributeInstance;
-import org.bukkit.entity.EntityType;
+import org.bukkit.attribute.AttributeModifier;
 import org.bukkit.entity.Player;
 import org.bukkit.event.inventory.InventoryType;
+import org.bukkit.inventory.EquipmentSlot;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.persistence.PersistentDataContainer;
 import org.bukkit.potion.PotionEffect;
 import org.bukkit.potion.PotionEffectType;
-import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.Range;
@@ -49,7 +51,6 @@ import org.jetbrains.annotations.Range;
 import java.util.*;
 import java.util.logging.Level;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static net.william278.husksync.util.BukkitKeyedAdapter.*;
 
@@ -65,17 +66,18 @@ public abstract class BukkitData implements Data {
     @Getter
     public static abstract class Items extends BukkitData implements Data.Items {
 
-        private final ItemStack[] contents;
+        private final @Nullable ItemStack @NotNull [] contents;
 
-        private Items(@NotNull ItemStack[] contents) {
-            this.contents = Arrays.stream(contents)
+        private Items(@Nullable ItemStack @NotNull [] contents) {
+
+            this.contents = Arrays.stream(contents.clone())
                     .map(i -> i == null || i.getType() == Material.AIR ? null : i)
                     .toArray(ItemStack[]::new);
         }
 
-        @NotNull
+        @Nullable
         @Override
-        public Stack[] getStack() {
+        public Stack @NotNull [] getStack() {
             return Arrays.stream(contents)
                     .map(stack -> stack != null ? new Stack(
                             stack.getType().getKey().toString(),
@@ -105,7 +107,7 @@ public abstract class BukkitData implements Data {
             this.setContents(((BukkitData.Items) contents).getContents());
         }
 
-        public void setContents(@NotNull ItemStack[] contents) {
+        public void setContents(@Nullable ItemStack @NotNull [] contents) {
             // Ensure the array is the correct length for the inventory
             if (contents.length != this.contents.length) {
                 contents = Arrays.copyOf(contents, this.contents.length);
@@ -130,13 +132,13 @@ public abstract class BukkitData implements Data {
             @Range(from = 0, to = 8)
             private int heldItemSlot;
 
-            private Inventory(@NotNull ItemStack[] contents, int heldItemSlot) {
+            private Inventory(@Nullable ItemStack @NotNull [] contents, int heldItemSlot) {
                 super(contents);
                 this.heldItemSlot = heldItemSlot;
             }
 
             @NotNull
-            public static BukkitData.Items.Inventory from(@NotNull ItemStack[] contents, int heldItemSlot) {
+            public static BukkitData.Items.Inventory from(@Nullable ItemStack @NotNull [] contents, int heldItemSlot) {
                 return new BukkitData.Items.Inventory(contents, heldItemSlot);
             }
 
@@ -235,21 +237,20 @@ public abstract class BukkitData implements Data {
 
         @NotNull
         public static BukkitData.PotionEffects adapt(@NotNull Collection<Effect> effects) {
-            return from(
-                    effects.stream()
-                            .map(effect -> new PotionEffect(
-                                    Objects.requireNonNull(
-                                            PotionEffectType.getByName(effect.type()),
-                                            "Invalid potion effect type"
-                                    ),
-                                    effect.duration(),
-                                    effect.amplifier(),
-                                    effect.isAmbient(),
-                                    effect.showParticles(),
-                                    effect.hasIcon()
-                            ))
-                            .toList()
-            );
+            return from(effects.stream()
+                    .map(effect -> {
+                        final PotionEffectType type = matchEffectType(effect.type());
+                        return type != null ? new PotionEffect(
+                                type,
+                                effect.duration(),
+                                effect.amplifier(),
+                                effect.isAmbient(),
+                                effect.showParticles(),
+                                effect.hasIcon()
+                        ) : null;
+                    })
+                    .filter(Objects::nonNull)
+                    .toList());
         }
 
         @NotNull
@@ -327,31 +328,26 @@ public abstract class BukkitData implements Data {
                         .filter(r -> r.getKey().equals(advancement.getKey().toString()))
                         .findFirst();
                 if (record.isEmpty()) {
-                    this.setAdvancement(plugin, advancement, player, List.of(), progress.getAwardedCriteria());
+                    this.setAdvancement(plugin, advancement, player, user, List.of(), progress.getAwardedCriteria());
                     return;
                 }
 
                 final Map<String, Date> criteria = record.get().getCompletedCriteria();
                 this.setAdvancement(
-                        plugin, advancement, player,
+                        plugin, advancement, player, user,
                         criteria.keySet().stream().filter(key -> !progress.getAwardedCriteria().contains(key)).toList(),
                         progress.getAwardedCriteria().stream().filter(key -> !criteria.containsKey(key)).toList()
                 );
             }));
         }
 
-        private void setAdvancement(@NotNull HuskSync plugin,
-                                    @NotNull org.bukkit.advancement.Advancement advancement, @NotNull Player player,
+        private void setAdvancement(@NotNull HuskSync plugin, @NotNull org.bukkit.advancement.Advancement advancement,
+                                    @NotNull Player player, @NotNull BukkitUser user,
                                     @NotNull Collection<String> toAward, @NotNull Collection<String> toRevoke) {
             plugin.runSync(() -> {
                 // Track player exp level & progress
                 final int expLevel = player.getLevel();
                 final float expProgress = player.getExp();
-                boolean gameRuleUpdated = false;
-                if (Boolean.TRUE.equals(player.getWorld().getGameRuleValue(GameRule.ANNOUNCE_ADVANCEMENTS))) {
-                    player.getWorld().setGameRule(GameRule.ANNOUNCE_ADVANCEMENTS, false);
-                    gameRuleUpdated = true;
-                }
 
                 // Award and revoke advancement criteria
                 final AdvancementProgress progress = player.getAdvancementProgress(advancement);
@@ -363,10 +359,7 @@ public abstract class BukkitData implements Data {
                     player.setLevel(expLevel);
                     player.setExp(expProgress);
                 }
-                if (gameRuleUpdated) {
-                    player.getWorld().setGameRule(GameRule.ANNOUNCE_ADVANCEMENTS, true);
-                }
-            });
+            }, user);
         }
 
         // Performs a consuming function for every advancement registered on the server
@@ -431,213 +424,103 @@ public abstract class BukkitData implements Data {
 
     }
 
+    @Getter
     @AllArgsConstructor(access = AccessLevel.PRIVATE)
     @NoArgsConstructor(access = AccessLevel.PRIVATE)
-    public static class Statistics extends BukkitData implements Data.Statistics {
-        private Map<Statistic, Integer> genericStatistics;
-        private Map<Statistic, Map<Material, Integer>> blockStatistics;
-        private Map<Statistic, Map<Material, Integer>> itemStatistics;
-        private Map<Statistic, Map<EntityType, Integer>> entityStatistics;
+    public static class Statistics extends BukkitData implements Data.Statistics, Adaptable {
+
+        @SerializedName("generic")
+        private Map<String, Integer> genericStatistics;
+        @SerializedName("blocks")
+        private Map<String, Map<String, Integer>> blockStatistics;
+        @SerializedName("items")
+        private Map<String, Map<String, Integer>> itemStatistics;
+        @SerializedName("entities")
+        private Map<String, Map<String, Integer>> entityStatistics;
 
         @NotNull
         public static BukkitData.Statistics adapt(@NotNull Player player) {
-            return new BukkitData.Statistics(
-                    // Generic (untyped) stats
-                    Arrays.stream(Statistic.values())
-                            .filter(stat -> stat.getType() == Statistic.Type.UNTYPED)
-                            .filter(stat -> player.getStatistic(stat) != 0)
-                            .map(stat -> Map.entry(stat, player.getStatistic(stat)))
-                            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)),
-
-                    // Block stats
-                    Arrays.stream(Statistic.values())
-                            .filter(stat -> stat.getType() == Statistic.Type.BLOCK)
-                            .map(stat -> Map.entry(stat, Arrays.stream(Material.values())
-                                    .filter(Material::isBlock)
-                                    .filter(material -> player.getStatistic(stat, material) != 0)
-                                    .map(material -> Map.entry(material, player.getStatistic(stat, material)))
-                                    .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))))
-                            .filter(entry -> !entry.getValue().isEmpty())
-                            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)),
-
-                    // Item stats
-                    Arrays.stream(Statistic.values())
-                            .filter(stat -> stat.getType() == Statistic.Type.ITEM)
-                            .map(stat -> Map.entry(stat, Arrays.stream(Material.values())
-                                    .filter(Material::isItem)
-                                    .filter(material -> player.getStatistic(stat, material) != 0)
-                                    .map(material -> Map.entry(material, player.getStatistic(stat, material)))
-                                    .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))))
-                            .filter(entry -> !entry.getValue().isEmpty())
-                            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)),
-
-                    // Entity stats
-                    Arrays.stream(Statistic.values())
-                            .filter(stat -> stat.getType() == Statistic.Type.ENTITY)
-                            .map(stat -> Map.entry(stat, Arrays.stream(EntityType.values())
-                                    .filter(EntityType::isAlive)
-                                    .filter(entityType -> player.getStatistic(stat, entityType) != 0)
-                                    .map(entityType -> Map.entry(entityType, player.getStatistic(stat, entityType)))
-                                    .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))))
-                            .filter(entry -> !entry.getValue().isEmpty())
-                            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))
-            );
-        }
-
-        @NotNull
-        public static BukkitData.Statistics from(@NotNull StatisticsMap stats) {
-            return new BukkitData.Statistics(
-                    stats.genericStats().entrySet().stream()
-                            .flatMap(entry -> {
-                                Statistic statistic = matchStatistic(entry.getKey());
-                                return statistic != null ? Stream.of(new AbstractMap.SimpleEntry<>(statistic, entry.getValue())) : Stream.empty();
-                            })
-                            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)),
-                    stats.blockStats().entrySet().stream()
-                            .flatMap(entry -> {
-                                Statistic statistic = matchStatistic(entry.getKey());
-                                return statistic != null ? Stream.of(new AbstractMap.SimpleEntry<>(statistic, entry.getValue())) : Stream.empty();
-                            })
-                            .collect(Collectors.toMap(
-                                    Map.Entry::getKey,
-                                    entry -> entry.getValue().entrySet().stream()
-                                            .flatMap(blockEntry -> {
-                                                Material material = matchMaterial(blockEntry.getKey());
-                                                return material != null ? Stream.of(new AbstractMap.SimpleEntry<>(material, blockEntry.getValue())) : Stream.empty();
-                                            })
-                                            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))
-                            )),
-                    stats.itemStats().entrySet().stream()
-                            .flatMap(entry -> {
-                                Statistic statistic = matchStatistic(entry.getKey());
-                                return statistic != null ? Stream.of(new AbstractMap.SimpleEntry<>(statistic, entry.getValue())) : Stream.empty();
-                            })
-                            .collect(Collectors.toMap(
-                                    Map.Entry::getKey,
-                                    entry -> entry.getValue().entrySet().stream()
-                                            .flatMap(itemEntry -> {
-                                                Material material = matchMaterial(itemEntry.getKey());
-                                                return material != null ? Stream.of(new AbstractMap.SimpleEntry<>(material, itemEntry.getValue())) : Stream.empty();
-                                            })
-                                            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))
-                            )),
-                    stats.entityStats().entrySet().stream()
-                            .flatMap(entry -> {
-                                Statistic statistic = matchStatistic(entry.getKey());
-                                return statistic != null ? Stream.of(new AbstractMap.SimpleEntry<>(statistic, entry.getValue())) : Stream.empty();
-                            })
-                            .collect(Collectors.toMap(
-                                    Map.Entry::getKey,
-                                    entry -> entry.getValue().entrySet().stream()
-                                            .flatMap(itemEntry -> {
-                                                EntityType entityType = matchEntityType(itemEntry.getKey());
-                                                return entityType != null ? Stream.of(new AbstractMap.SimpleEntry<>(entityType, itemEntry.getValue())) : Stream.empty();
-                                            })
-                                            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))
-                            ))
-            );
-        }
-
-        @NotNull
-        public static BukkitData.Statistics from(@NotNull Map<Statistic, Integer> genericStats,
-                                                 @NotNull Map<Statistic, Map<Material, Integer>> blockStats,
-                                                 @NotNull Map<Statistic, Map<Material, Integer>> itemStats,
-                                                 @NotNull Map<Statistic, Map<EntityType, Integer>> entityStats) {
-            return new BukkitData.Statistics(genericStats, blockStats, itemStats, entityStats);
-        }
-
-        @NotNull
-        @ApiStatus.Internal
-        public static StatisticsMap createStatisticsMap(@NotNull Map<String, Integer> genericStats,
-                                                        @NotNull Map<String, Map<String, Integer>> blockStats,
-                                                        @NotNull Map<String, Map<String, Integer>> itemStats,
-                                                        @NotNull Map<String, Map<String, Integer>> entityStats) {
-            return new StatisticsMap(genericStats, blockStats, itemStats, entityStats);
-        }
-
-        @Override
-        public void apply(@NotNull BukkitUser user, @NotNull BukkitHuskSync plugin) throws IllegalStateException {
-            genericStatistics.forEach((stat, value) -> applyStat(user, stat, null, value));
-            blockStatistics.forEach((stat, m) -> m.forEach((block, value) -> applyStat(user, stat, block, value)));
-            itemStatistics.forEach((stat, m) -> m.forEach((item, value) -> applyStat(user, stat, item, value)));
-            entityStatistics.forEach((stat, m) -> m.forEach((entity, value) -> applyStat(user, stat, entity, value)));
-        }
-
-        private void applyStat(@NotNull UserDataHolder user, @NotNull Statistic stat, @Nullable Object type, int value) {
-            try {
-                final Player player = ((BukkitUser) user).getPlayer();
-                if (type == null) {
-                    player.setStatistic(stat, value);
-                } else if (type instanceof Material) {
-                    player.setStatistic(stat, (Material) type, value);
-                } else if (type instanceof EntityType) {
-                    player.setStatistic(stat, (EntityType) type, value);
+            final Map<String, Integer> generic = Maps.newHashMap();
+            final Map<String, Map<String, Integer>> blocks = Maps.newHashMap(),
+                    items = Maps.newHashMap(), entities = Maps.newHashMap();
+            Registry.STATISTIC.forEach(id -> {
+                switch (id.getType()) {
+                    case UNTYPED -> addStatistic(player, id, generic);
+                    case BLOCK -> addMaterialStatistic(player, id, blocks, true);
+                    case ITEM -> addMaterialStatistic(player, id, items, false);
+                    case ENTITY -> addEntityStatistic(player, id, entities);
                 }
-            } catch (IllegalArgumentException ignored) {
+            });
+            return new BukkitData.Statistics(generic, blocks, items, entities);
+        }
+
+        @NotNull
+        public static BukkitData.Statistics from(@NotNull Map<String, Integer> generic,
+                                                 @NotNull Map<String, Map<String, Integer>> blocks,
+                                                 @NotNull Map<String, Map<String, Integer>> items,
+                                                 @NotNull Map<String, Map<String, Integer>> entities) {
+            return new BukkitData.Statistics(generic, blocks, items, entities);
+        }
+
+        private static void addStatistic(@NotNull Player p, @NotNull Statistic id, @NotNull Map<String, Integer> map) {
+            final int stat = p.getStatistic(id);
+            if (stat != 0) {
+                map.put(id.getKey().getKey(), stat);
             }
         }
 
-        @NotNull
+        private static void addMaterialStatistic(@NotNull Player p, @NotNull Statistic id,
+                                                 @NotNull Map<String, Map<String, Integer>> map, boolean isBlock) {
+            Registry.MATERIAL.forEach(material -> {
+                if ((material.isBlock() && !isBlock) || (material.isItem() && isBlock)) {
+                    return;
+                }
+                final int stat = p.getStatistic(id, material);
+                if (stat != 0) {
+                    map.computeIfAbsent(id.getKey().getKey(), k -> Maps.newHashMap())
+                            .put(material.getKey().getKey(), stat);
+                }
+            });
+        }
+
+        private static void addEntityStatistic(@NotNull Player p, @NotNull Statistic id,
+                                               @NotNull Map<String, Map<String, Integer>> map) {
+            Registry.ENTITY_TYPE.forEach(entity -> {
+                if (!entity.isAlive()) {
+                    return;
+                }
+                final int stat = p.getStatistic(id, entity);
+                if (stat != 0) {
+                    map.computeIfAbsent(id.getKey().getKey(), k -> Maps.newHashMap())
+                            .put(entity.getKey().getKey(), stat);
+                }
+            });
+        }
+
         @Override
-        public Map<String, Integer> getGenericStatistics() {
-            return convertStatistics(genericStatistics);
+        public void apply(@NotNull BukkitUser user, @NotNull BukkitHuskSync plugin) {
+            genericStatistics.forEach((id, v) -> applyStat(user, id, Statistic.Type.UNTYPED, v));
+            blockStatistics.forEach((id, m) -> m.forEach((b, v) -> applyStat(user, id, Statistic.Type.BLOCK, v, b)));
+            itemStatistics.forEach((id, m) -> m.forEach((i, v) -> applyStat(user, id, Statistic.Type.ITEM, v, i)));
+            entityStatistics.forEach((id, m) -> m.forEach((e, v) -> applyStat(user, id, Statistic.Type.ENTITY, v, e)));
         }
 
-        @NotNull
-        @Override
-        public Map<String, Map<String, Integer>> getBlockStatistics() {
-            return blockStatistics.entrySet().stream().filter(entry -> entry.getKey() != null).collect(
-                    TreeMap::new,
-                    (m, e) -> getKeyName(e.getKey()).ifPresent(key -> m.put(key, convertStatistics(e.getValue()))),
-                    TreeMap::putAll
-            );
-        }
+        private void applyStat(@NotNull UserDataHolder user, @NotNull String id,
+                               @NotNull Statistic.Type type, int value, @NotNull String... key) {
+            final Player player = ((BukkitUser) user).getPlayer();
+            final Statistic stat = matchStatistic(id);
+            if (stat == null) {
+                return;
+            }
 
-        @NotNull
-        @Override
-        public Map<String, Map<String, Integer>> getItemStatistics() {
-            return itemStatistics.entrySet().stream().filter(entry -> entry.getKey() != null).collect(
-                    TreeMap::new,
-                    (m, e) -> getKeyName(e.getKey()).ifPresent(key -> m.put(key, convertStatistics(e.getValue()))),
-                    TreeMap::putAll
-            );
-        }
-
-        @NotNull
-        @Override
-        public Map<String, Map<String, Integer>> getEntityStatistics() {
-            return entityStatistics.entrySet().stream().filter(entry -> entry.getKey() != null).collect(
-                    TreeMap::new,
-                    (m, e) -> getKeyName(e.getKey()).ifPresent(key -> m.put(key, convertStatistics(e.getValue()))),
-                    TreeMap::putAll
-            );
-        }
-
-        @NotNull
-        private <T extends Keyed> Map<String, Integer> convertStatistics(@NotNull Map<T, Integer> stats) {
-            return stats.entrySet().stream().filter(entry -> entry.getKey() != null).collect(
-                    TreeMap::new,
-                    (m, e) -> getKeyName(e.getKey()).ifPresent(key -> m.put(key, e.getValue())),
-                    TreeMap::putAll
-            );
-        }
-
-        @NotNull
-        protected StatisticsMap getStatisticsSet() {
-            return new StatisticsMap(
-                    getGenericStatistics(),
-                    getBlockStatistics(),
-                    getItemStatistics(),
-                    getEntityStatistics()
-            );
-        }
-
-        public record StatisticsMap(
-                @SerializedName("generic") @NotNull Map<String, Integer> genericStats,
-                @SerializedName("blocks") @NotNull Map<String, Map<String, Integer>> blockStats,
-                @SerializedName("items") @NotNull Map<String, Map<String, Integer>> itemStats,
-                @SerializedName("entities") @NotNull Map<String, Map<String, Integer>> entityStats
-        ) {
+            try {
+                switch (type) {
+                    case UNTYPED -> player.setStatistic(stat, value);
+                    case BLOCK, ITEM -> player.setStatistic(stat, Objects.requireNonNull(matchMaterial(key[0])), value);
+                    case ENTITY -> player.setStatistic(stat, Objects.requireNonNull(matchEntityType(key[0])), value);
+                }
+            } catch (Throwable ignored) {
+            }
         }
 
     }
@@ -645,7 +528,6 @@ public abstract class BukkitData implements Data {
     @Getter
     @AllArgsConstructor(access = AccessLevel.PRIVATE)
     public static class PersistentData extends BukkitData implements Data.PersistentData {
-
         private final NBTCompound persistentData;
 
         @NotNull
@@ -670,94 +552,147 @@ public abstract class BukkitData implements Data {
     }
 
     @Getter
+    @AllArgsConstructor(access = AccessLevel.PRIVATE)
+    @NoArgsConstructor(access = AccessLevel.PRIVATE)
+    public static class Attributes extends BukkitData implements Data.Attributes, Adaptable {
+
+        private List<Attribute> attributes;
+
+        @NotNull
+        public static BukkitData.Attributes adapt(@NotNull Player player, @NotNull HuskSync plugin) {
+            final List<Attribute> attributes = Lists.newArrayList();
+            Registry.ATTRIBUTE.forEach(id -> {
+                final AttributeInstance instance = player.getAttribute(id);
+                if (instance == null || instance.getValue() == instance.getDefaultValue() || plugin
+                        .getSettings().getSynchronization().isIgnoredAttribute(id.getKey().toString())) {
+                    // We don't sync unmodified or disabled attributes
+                    return;
+                }
+                attributes.add(adapt(instance));
+            });
+            return new BukkitData.Attributes(attributes);
+        }
+
+        public Optional<Attribute> getAttribute(@NotNull org.bukkit.attribute.Attribute id) {
+            return attributes.stream().filter(attribute -> attribute.name().equals(id.getKey().toString())).findFirst();
+        }
+
+        @SuppressWarnings("unused")
+        public Optional<Attribute> getAttribute(@NotNull String key) {
+            final org.bukkit.attribute.Attribute attribute = matchAttribute(key);
+            if (attribute == null) {
+                return Optional.empty();
+            }
+            return getAttribute(attribute);
+        }
+
+        @NotNull
+        private static Attribute adapt(@NotNull AttributeInstance instance) {
+            return new Attribute(
+                    instance.getAttribute().getKey().toString(),
+                    instance.getBaseValue(),
+                    instance.getModifiers().stream().map(BukkitData.Attributes::adapt).collect(Collectors.toSet())
+            );
+        }
+
+        @NotNull
+        private static Modifier adapt(@NotNull AttributeModifier modifier) {
+            return new Modifier(
+                    modifier.getUniqueId(),
+                    modifier.getName(),
+                    modifier.getAmount(),
+                    modifier.getOperation().ordinal(),
+                    modifier.getSlot() != null ? modifier.getSlot().ordinal() : -1
+            );
+        }
+
+        @Override
+        public void apply(@NotNull BukkitUser user, @NotNull BukkitHuskSync plugin) throws IllegalStateException {
+            Registry.ATTRIBUTE.forEach(id -> applyAttribute(user.getPlayer().getAttribute(id), getAttribute(id).orElse(null)));
+        }
+
+        private static void applyAttribute(@Nullable AttributeInstance instance, @Nullable Attribute attribute) {
+            if (instance == null) {
+                return;
+            }
+            instance.setBaseValue(attribute == null ? instance.getDefaultValue() : attribute.baseValue());
+            instance.getModifiers().forEach(instance::removeModifier);
+            if (attribute != null) {
+                attribute.modifiers().forEach(modifier -> instance.addModifier(new AttributeModifier(
+                        modifier.uuid(),
+                        modifier.name(),
+                        modifier.amount(),
+                        AttributeModifier.Operation.values()[modifier.operationType()],
+                        modifier.equipmentSlot() != -1 ? EquipmentSlot.values()[modifier.equipmentSlot()] : null
+                )));
+            }
+        }
+
+    }
+
+    @Getter
     @Setter
     @AllArgsConstructor(access = AccessLevel.PRIVATE)
     @NoArgsConstructor(access = AccessLevel.PRIVATE)
     public static class Health extends BukkitData implements Data.Health, Adaptable {
-
         @SerializedName("health")
         private double health;
-        @SerializedName("max_health")
-        private double maxHealth;
         @SerializedName("health_scale")
         private double healthScale;
-
+        @SerializedName("is_health_scaled")
+        private boolean isHealthScaled;
 
         @NotNull
-        public static BukkitData.Health from(double health, double maxHealth, double healthScale) {
-            return new BukkitData.Health(health, maxHealth, healthScale);
+        public static BukkitData.Health from(double health, double scale, boolean isScaled) {
+            return new BukkitData.Health(health, scale, isScaled);
+        }
+
+        /**
+         * @deprecated Use {@link #from(double, double, boolean)} instead
+         */
+        @NotNull
+        @Deprecated(since = "3.5.4")
+        public static BukkitData.Health from(double health, double scale) {
+            return from(health, scale, false);
+        }
+
+        /**
+         * @deprecated Use {@link #from(double, double, boolean)} instead
+         */
+        @NotNull
+        @Deprecated(forRemoval = true, since = "3.5")
+        public static BukkitData.Health from(double health, @SuppressWarnings("unused") double max, double scale) {
+            return from(health, scale, false);
         }
 
         @NotNull
         public static BukkitData.Health adapt(@NotNull Player player) {
             return from(
                     player.getHealth(),
-                    getMaxHealth(player),
-                    player.isHealthScaled() ? player.getHealthScale() : 0d
+                    player.getHealthScale(),
+                    player.isHealthScaled()
             );
         }
 
         @Override
+        @SuppressWarnings("deprecation")
         public void apply(@NotNull BukkitUser user, @NotNull BukkitHuskSync plugin) throws IllegalStateException {
             final Player player = user.getPlayer();
 
-            // Set max health
-            final AttributeInstance maxHealth = getMaxHealthAttribute(player);
-            try {
-                if (plugin.getSettings().getSynchronization().isSynchronizeMaxHealth() && this.maxHealth != 0) {
-                    maxHealth.setBaseValue(this.maxHealth);
-                }
-            } catch (Throwable e) {
-                plugin.log(Level.WARNING, String.format("Failed setting the max health of %s to %s",
-                        player.getName(), this.maxHealth), e);
-            }
-
             // Set health
             try {
-                final double health = player.getHealth();
-                player.setHealth(Math.min(health, maxHealth.getBaseValue()));
+                player.setHealth(Math.min(health, player.getMaxHealth()));
             } catch (Throwable e) {
-                plugin.log(Level.WARNING, String.format("Failed setting the health of %s to %s",
-                        player.getName(), this.maxHealth), e);
+                plugin.log(Level.WARNING, "Error setting %s's health to %s".formatted(player.getName(), health), e);
             }
 
             // Set health scale
             try {
-                if (this.healthScale != 0d) {
-                    player.setHealthScaled(true);
-                    player.setHealthScale(this.healthScale);
-                } else {
-                    player.setHealthScaled(false);
-                    player.setHealthScale(this.maxHealth);
-                }
+                player.setHealthScale(healthScale);
+                player.setHealthScaled(isHealthScaled);
             } catch (Throwable e) {
-                plugin.log(Level.WARNING, String.format("Failed setting the health scale of %s to %s",
-                        player.getName(), this.healthScale), e);
+                plugin.log(Level.WARNING, "Error setting %s's health scale to %s".formatted(player.getName(), healthScale), e);
             }
-        }
-
-        // Returns the max health of a player, accounting for health boost potion effects
-        private static double getMaxHealth(@NotNull Player player) {
-            // Get the base value of the attribute (ignore armor, items that give health boosts, etc.)
-            double maxHealth = getMaxHealthAttribute(player).getBaseValue();
-
-            // Subtract health boost potion effects from stored max health
-            if (player.hasPotionEffect(PotionEffectType.HEALTH_BOOST) && maxHealth > 20d) {
-                final PotionEffect healthBoost = Objects.requireNonNull(
-                        player.getPotionEffect(PotionEffectType.HEALTH_BOOST), "Health boost effect was null"
-                );
-                maxHealth -= (4 * (healthBoost.getAmplifier() + 1));
-            }
-
-            return maxHealth;
-        }
-
-        // Returns the max health attribute of a player
-        @NotNull
-        private static AttributeInstance getMaxHealthAttribute(@NotNull Player player) {
-            return Objects.requireNonNull(
-                    player.getAttribute(Attribute.GENERIC_MAX_HEALTH), "Max health attribute was null"
-            );
         }
 
     }
@@ -803,8 +738,10 @@ public abstract class BukkitData implements Data {
 
         @SerializedName("total_experience")
         private int totalExperience;
+
         @SerializedName("exp_level")
         private int expLevel;
+
         @SerializedName("exp_progress")
         private float expProgress;
 
@@ -828,6 +765,7 @@ public abstract class BukkitData implements Data {
 
     }
 
+    @Getter
     @Setter
     @AllArgsConstructor(access = AccessLevel.PRIVATE)
     @NoArgsConstructor(access = AccessLevel.PRIVATE)
@@ -835,53 +773,57 @@ public abstract class BukkitData implements Data {
 
         @SerializedName("game_mode")
         private String gameMode;
-        @SerializedName("allow_flight")
-        private boolean allowFlight;
-        @SerializedName("is_flying")
-        private boolean isFlying;
 
         @NotNull
+        public static BukkitData.GameMode from(@NotNull String gameMode) {
+            return new BukkitData.GameMode(gameMode);
+        }
+
+        @NotNull
+        @Deprecated(forRemoval = true, since = "3.5")
+        @SuppressWarnings("unused")
         public static BukkitData.GameMode from(@NotNull String gameMode, boolean allowFlight, boolean isFlying) {
-            return new BukkitData.GameMode(gameMode, allowFlight, isFlying);
+            return new BukkitData.GameMode(gameMode);
         }
 
         @NotNull
         public static BukkitData.GameMode adapt(@NotNull Player player) {
-            return from(player.getGameMode().name(), player.getAllowFlight(), player.isFlying());
+            return from(player.getGameMode().name());
+        }
+
+        @Override
+        public void apply(@NotNull BukkitUser user, @NotNull BukkitHuskSync plugin) throws IllegalStateException {
+            user.getPlayer().setGameMode(org.bukkit.GameMode.valueOf(gameMode));
+        }
+
+    }
+
+    @Getter
+    @Setter
+    @AllArgsConstructor(access = AccessLevel.PRIVATE)
+    @NoArgsConstructor(access = AccessLevel.PRIVATE)
+    public static class FlightStatus extends BukkitData implements Data.FlightStatus, Adaptable {
+
+        @SerializedName("allow_flight")
+        private boolean allowFlight;
+        @SerializedName("is_flying")
+        private boolean flying;
+
+        @NotNull
+        public static BukkitData.FlightStatus from(boolean allowFlight, boolean flying) {
+            return new BukkitData.FlightStatus(allowFlight, allowFlight && flying);
+        }
+
+        @NotNull
+        public static BukkitData.FlightStatus adapt(@NotNull Player player) {
+            return from(player.getAllowFlight(), player.isFlying());
         }
 
         @Override
         public void apply(@NotNull BukkitUser user, @NotNull BukkitHuskSync plugin) throws IllegalStateException {
             final Player player = user.getPlayer();
-            player.setGameMode(org.bukkit.GameMode.valueOf(gameMode));
             player.setAllowFlight(allowFlight);
-            player.setFlying(allowFlight && isFlying);
-        }
-
-        @NotNull
-        @Override
-        public String getGameMode() {
-            return gameMode;
-        }
-
-        @Override
-        public void setGameMode(@NotNull String gameMode) {
-            this.gameMode = gameMode;
-        }
-
-        @Override
-        public boolean getAllowFlight() {
-            return allowFlight;
-        }
-
-        @Override
-        public boolean getIsFlying() {
-            return isFlying;
-        }
-
-        @Override
-        public void setIsFlying(boolean isFlying) {
-            this.isFlying = isFlying;
+            player.setFlying(allowFlight && flying);
         }
 
     }
